# crews

crews/: .gitpod.yml  fp-points_campaign_doc.md  pyproject.toml
crews/crews/: __main__.py  document_edits.py  index.py
crews/tests/: test_document_edit.py
